added HTML elements for the header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title>Eyoel's Landing Page</title>
     </head>
     <body>
-        <h1>HELLO WORLD!</h1>
+        <div id="header">
+            <img class="header_element" src="./images/website_logo.jpg">
+            <a class="header_element">Header Link 1</a>
+            <a class="header_element">Header Link 2</a>
+            <a class="header_element">Header Link 3</a>
+        </div>
     </body>
 </html>
