finished header styling, aside from minor issues

--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Eyoel's Landing Page</title>
-    </head>
-    <body>
-        <div id="header">
-            <img class="header_element" src="./images/website_logo.jpg">
-            <a class="header_element">Header Link 1</a>
-            <a class="header_element">Header Link 2</a>
-            <a class="header_element">Header Link 3</a>
-        </div>
+        <head>
+            <meta charset="UTF-8">
+            <title>Eyoel's Landing Page</title>
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        <body>
+            <div id="page_wrapper">
+                <div id="header">
+                    <!-- <img class="header_element" src="./images/website_logo.jpg"> -->
+                    <div id="header_logo">
+                        <p class=header_element>Header Logo</p>
+                    </div>
+                    <div id="header_links">
+                        <a class="header_element">Header Link 1</a>
+                        <a class="header_element">Header Link 2</a>
+                        <a class="header_element">Header Link 3</a>
+                        <!-- <p class="header_element">Header Link 1</a>
+                        <p class="header_element">Header Link 2</a>
+                        <p class="header_element">Header Link 3</a> -->  
+                    </div>
+        
+                </div>
+                <div id="intro_block"></div>
+                <div id="information_block"></div>
+                <div id="quote_block"></div>
+                <div id="call_to_action_block"></div>
+                <div id="footer"></div>
+            </div>
+    
     </body>
 </html>
