added html elements for intro section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
         
                 </div>
                 <div id="intro_block"></div>
-                    <p id="intro_title">This webite is Awesome</p>
-                    <p id="into_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button id="intro_button">Sign Up</button>
+                    <div id="intro_text">
+                        <p id="intro_title">This webite is Awesome</p>
+                        <p id="into_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                        <button id="intro_button">Sign Up</button>
+                    </div>
+                    <div id="intro_button">
+                        <img id="intro_img" src="./images/rainy_street.jpg">
+                    </div>
                 <div id="information_block"></div>
                 <div id="quote_block"></div>
                 <div id="call_to_action_block"></div>
