set up flex item/containter structure for intro section

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
                     </div>
         
                 </div>
-                <div id="intro_block"></div>
+                <div id="intro_block">
                     <div id="intro_text">
                         <p id="intro_title">This webite is Awesome</p>
                         <p id="into_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                         <button id="intro_button">Sign Up</button>
                     </div>
-                    <div id="intro_button">
+                    <div id="intro_img_section">
                         <img id="intro_img" src="./images/rainy_street.jpg">
                     </div>
+                </div>
                 <div id="information_block"></div>
                 <div id="quote_block"></div>
                 <div id="call_to_action_block"></div>
