finished intro section styling aside from some minor issues

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                     </div>
         
                 </div>
-                <div id="intro_block">
-                    <div id="intro_text">
-                        <p id="intro_title">This webite is Awesome</p>
-                        <p id="into_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div id="intro_section">
+                    <div id="intro_text_section">
+                        <p id="intro_title">This Website is Awesome</p>
+                        <p id="intro_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                         <button id="intro_button">Sign Up</button>
                     </div>
                     <div id="intro_img_section">
                         <img id="intro_img" src="./images/rainy_street.jpg">
                     </div>
                 </div>
-                <div id="information_block"></div>
-                <div id="quote_block"></div>
-                <div id="call_to_action_block"></div>
+                <div id="information_section"></div>
+                <div id="quote_section"></div>
+                <div id="call_to_action_section"></div>
                 <div id="footer"></div>
             </div>
     
